--- a/praxml2json/example1.html
+++ b/praxml2json/example1.html
@@ -44,7 +44,7 @@
 
 </body>
 
-<!-- Including the function (or you can copy&past in script -->
+<!-- Including the function (or you can copy&paste in script -->
 <script src="praxml2json.js"></script>
 
 <script>
